syntax = "proto3";
package me.zoeaubert.api;

message Game {
    uint32 id = 1;
    string name = 2;
    string image_url = 3;
    uint32 playtime = 4;
    string last_played = 5;
    string link_url = 6;
}

message Games {
    map<uint32, Game> games = 1;
    repeated uint32 game_ids = 2;
    repeated uint32 games_by_last_played = 3;
    repeated uint32 games_by_playtime = 4;
    uint32 total_playtime = 5;
}